Implemented createAddQuoteForm to dynamically generate form

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -20,14 +20,7 @@
 
         <hr>
 
-        <section class="add-quote-section">
-            <h2>Add New Quote</h2>
-            <div class="input-group">
-                <input type="text" id="newQuoteTextInput" placeholder="Enter new quote text" class="text-input">
-                <input type="text" id="newQuoteCategoryInput" placeholder="Enter quote category" class="text-input">
-                <button id="addQuoteBtn" class="btn success-btn">Add Quote</button>
-            </div>
-        </section>
+        <div id="addQuoteFormContainer"></div>
 
         <hr>
 
@@ -46,7 +39,7 @@
             <div class="file-ops-group">
                 <button id="exportQuotesBtn" class="btn info-btn">Export Quotes to JSON</button>
                 <input type="file" id="importFile" accept=".json" class="file-input">
-                </div>
+            </div>
         </section>
 
         <hr>
